# lablens

./: .dockerignore  .env.example  .env.production.example  .gitignore  Makefile  README.md  pyproject.toml
data/: clinical-priority.yaml
data/aliases/: analyte-families.yaml  common-aliases.yaml  (+1 more)
docker/: Dockerfile  Dockerfile.frontend  docker-compose.prod.yml  docker-compose.yml  nginx.conf
docs/: deployment-guide.md  pipeline-architecture-status.md
evaluation/: schema.json  scoring.py
frontend/: .env.production.example  next.config.ts
scripts/: cache_medlineplus.py  cert-renew.sh  ingest_loinc.py  ingest_medlineplus_to_dashvector.py  provision-ecs.sh  seed-demo-job.py  smoke-test.sh  test_pipeline.py
tests/: conftest.py  test_analyze_endpoint.py  test_band_validator.py  test_chat_endpoint.py  test_confidence_scoring.py  test_evaluation.py  test_evaluation_harness.py  test_export_semantics.py  test_gdb_client.py  test_health.py  test_health_topic_mapper.py  test_hplc_block_parser.py  test_interpretation_engine.py  test_interpretation_uncertainty.py  test_job_store.py  test_output_canonicalization.py  test_panel_checker.py  test_pdf_extraction.py  test_pipeline_integration.py  test_qa_grounding.py  test_qualitative_semantics.py  test_report_summarizer.py  test_retrieval.py  test_rules_loader.py  test_schemas.py  test_screening_parser.py  test_section_aware_enrichment.py  test_section_classifier.py  test_semantic_verifier.py  test_severity_cap.py  test_terminology_mapper.py  test_topic_grouper.py  test_unit_normalizer.py  test_unit_range_sanity.py
(+123 files in other folders)
